@@ -10,11 +10,10 @@ import org.kendar.protocol.descriptor.ProtoDescriptor;
 import org.kendar.proxy.ProxyConnection;
 
 import java.util.HashSet;
-import java.util.stream.Collectors;
 
 public class MqttContext extends NetworkProtoContext {
+    private final HashSet<Integer> usedPackets = new HashSet<>();
     private int protocolVersion;
-    private HashSet<Integer> usedPackets = new HashSet<>();
 
     public MqttContext(ProtoDescriptor descriptor, int contextId) {
         super(descriptor, contextId);
@@ -54,7 +53,7 @@ public class MqttContext extends NetworkProtoContext {
     }
 
     public int packetToUse() {
-        var list = usedPackets.stream().sorted(Integer::compare).collect(Collectors.toList());
+        var list = usedPackets.stream().sorted(Integer::compare).toList();
         var maxFoundedIndex = 28000;
         for (var i = list.size() - 1; i >= 0; i--) {
             var index = list.get(i);
